--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,42 +1,116 @@
-#root {
-  max-width: 1280px;
+.App {
+  font-family: Arial, sans-serif;
+  width: 90%;
+  max-width: 600px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 20px;
+  background-color: #0c0d0e;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+
+.header {
   text-align: center;
+  color: #ffffff;
+  margin-bottom: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.form-section {
+  margin-bottom: 30px;
+  padding: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-header {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.input-field {
+  width: 100%;
+  padding: 8px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-.card {
-  padding: 2em;
+.submit-btn {
+  padding: 8px 16px;
+  background-color: #10247e9a;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.submit-btn:hover {
+  background-color: #0026ff;
+}
+
+.list-section {
+  margin-top: 20px;
+  /* background-color: #1d2022; */ 
+}
+
+.list-header {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.user-list {
+  list-style-type: none;
+  padding: 0;
+  color: #ffffff;
+}
+
+.user-item {
+  margin-bottom: 15px;
+  padding: 10px;
+  border-bottom: 1px solid #0026ff;
+}
+
+.user-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-btn, .delete-btn, .cancel-btn {
+  padding: 8px;
+  margin: 5px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.edit-btn {
+  background-color: #10247e9a;
+}
+
+.delete-btn {
+  background-color: #f44336;
+}
+
+.cancel-btn {
+  background-color: #757575;
+}
+
+.edit-btn:hover {
+  background-color: #0026ff;
+}
+
+.delete-btn:hover {
+  background-color: #fd0000;
+}
+
+.cancel-btn:hover {
+  background-color: #4e4a4a;
 }
